Attempting to fix image issue on mobile devices

--- a/src/components/workouts/WorkoutItem.scss
+++ b/src/components/workouts/WorkoutItem.scss
@@ -142,7 +142,8 @@
 }
 
 .WorkoutItem-img-subcontainer {
-    // border: 2px solid green;
+    border: 2px solid green;
+    box-sizing: border-box;
     height: 100%;
     width: 100%;
     max-height: 100%;
@@ -154,6 +155,8 @@
 
 .WorkoutItem-img-item {
     object-fit: contain;
+    height: 100%;
+    width: 100%;
     max-height: 100%;
     max-width: 100%;
 }
